Edited wiki page through web user interface.

--- a/wiki/Acknowledgements.wiki
+++ b/wiki/Acknowledgements.wiki
@@ -1,1 +1,3 @@
+#summary Acknowledgements from the original author
+
 This patch was created with feedback from Joel Krauska, along with the whole Slide Operations team.
