Edited wiki page through web user interface.

--- a/wiki/UsageGuide.wiki
+++ b/wiki/UsageGuide.wiki
@@ -1,5 +1,5 @@
 #summary Guide to applying and using the bind-geoip patch
-#labels Featured
+#labels Featured,Phase-Deploy,Phase-Requirements
 
 =BIND GeoIP=
 
