--- a/wiki/UsageGuide.wiki
+++ b/wiki/UsageGuide.wiki
@@ -3,7 +3,7 @@
 
 =BIND GeoIP=
 
-This patch implements support for the !MaxMind® geolocation database (http://www.maxmind.com/app/ip-location) and uses the GeoIP C API.  This patch was inspired by the patch at (http://www.caraytech.com/geodns/).
+This patch implements support for the !MaxMind® geo-location database (http://www.maxmind.com/app/ip-location) and uses the GeoIP C API.  This patch was inspired by the patch at (http://www.caraytech.com/geodns/).
 
 The goals for this patch were to implement the City and other !MaxMind® databases and add thread safety.
 
@@ -17,6 +17,7 @@ Support is implemented for all relevant !MaxMind® databases:
   * AS number
   * Netspeed
   * Domain
+  * Country IPv6
 
 The Proxy and Accuracy Radius databases are not supported, since they should be used with the client's IP, not the IP address of the user-local DNS server (LDNS).
 
@@ -25,7 +26,7 @@ Both threaded and non-threaded operation have been tested.  >100B production que
 
 ==SUPPORTED BIND DISTRIBUTIONS==
 
-This patch applies cleanly to and has been heavily tested on 9.6.0-P1 through 9.6.1-P2.  It also applies cleanly to initial 9.7.0rc releases.  We currently plan to continue porting the patch to higher BIND releases, but back-ports for old BIND versions are not planned.
+This patch applies cleanly to and has been heavily tested on BIND production releases 9.6.0-P1 and above.  We plan to continue porting the patch to the latest 9.6 and 9.7 BIND production releases, but back-ports for older BIND versions are *not* planned.
 
 
 ==TESTED UNIX DISTRIBUTIONS==
@@ -39,7 +40,7 @@ To build BIND with GeoIP support, you will first need to build/install the GeoIP
 
 After unpacking the BIND distribution, cd into the untarred directory and run:
 
-  `patch -p0 -b < <path-to-this-patch>/bind-geoip-1.2.patch`
+  `patch -p0 -b < <path-to-this-patch>/bind-geoip-1.3.patch`
 
 This will apply the required patches. You can ignore any conflict on version, but we recommend you change the RELEASEVER string to denote a patched version.
 
@@ -51,11 +52,17 @@ To add GeoIP support when running configure, there are two key options:
 
   `--with-geoip`
 
-This enables support for all functionality.  To enable debug output (when BIND is passed the appropriate option and logging is enabled) use:
+This enables support for GeoIP functionality.  It looks for GeoIP in standard locations, and will automatically detect if IPv6 support is available.
+
+You can also specify a path to the location of your GeoIP install (within which should exist lib and include directories):
+
+  `--with-geoip=/usr/local`
+
+To enable debug output, use:
 
   `--with-geoip-debug`
 
-Adding the debug logging calls is theoretically a performance hit, but has not shown to be an issue even in heavy production.  Enabling this is recommended in case future issues occur that need to be debugged.
+Starting named with `-d3` or higher will provide logging for all attempted GeoIP matching.  Adding these debug logging calls is theoretically a performance hit, but even in heavy production, CPU usage does not change in any perceivable way.  Enabling this is recommended to debug unexpected behavior.
 
 
 ==CONFIGURATION==
@@ -70,14 +77,15 @@ Note that match-clients{} options are ANDed.  More complex logic must be obtaine
 
 Some examples:
 {{{
-# Equivalent to "country_US" in the Caraytech patch:
+# Backwards compatibility for Caraytech/geodns and derived patches:
+country_US;
+# New syntax
 geoip_countryDB_country_US;
 geoip_cityDB_city_San_Francisco;
 geoip_cityDB_timezone_America|Chicago;
 geoip_cityDB_country3_JAP;
 geoip_cityDB_regionname_California;
 geoip_cityDB_postal_94118;
-geoip_orgDB_name_Slide;
 # "Square" latitude/longitude area
 geoip_cityDB_lat_41.1_lat_43.1_lon_-82.0_lon_-84.1;
 # Latitudinal "stripe" area
@@ -90,6 +98,7 @@ geoip_cityDB_lat_80_lon_83.97_radius_1de;
 geoip_cityDB_lat_80_lon_73.97_radius_500mi;
 # Lat/lon radius in kilometers (adjusted)
 geoip_cityDB_lat_80_lon_73.97_radius_100km;
+geoip_orgDB_name_Slide;
 }}}
 
 The mechanics of BIND views and other BIND details are beyond the scope of this document, but the following is an example:
@@ -139,22 +148,23 @@ Views have precedence -- the first matching view will be used.  LDNS servers in 
 Once you install and start BIND, syslog will report something like the following:
 
 {{{
-Nov  9 17:07:40 u804 named[20155]: Initializing GeoIP Country DB
-Nov  9 17:07:40 u804 named[20155]: GEO-106FREE 20090201 Build 1 Copyright (c) 2007 MaxMind LLC All Rights Reserved
-Nov  9 17:07:40 u804 named[20155]: Initializing GeoIP City DB Revision 1
-Nov  9 17:07:40 u804 named[20155]: GEO-133 20091101 Build 1 Copyright (c) 2009 MaxMind Inc All Rights Reserved
-Nov  9 17:07:40 u804 named[20155]: GeoIP Region DB Revision 0 or 1 not available
-Nov  9 17:07:40 u804 named[20155]: GeoIP ISP DB not available
-Nov  9 17:07:40 u804 named[20155]: Initializing GeoIP Organization DB
-Nov  9 17:07:40 u804 named[20155]: GEO-111 20091101 Build 1 Copyright (c) 2009 MaxMind Inc All Rights Reserved
-Nov  9 17:07:40 u804 named[20155]: Initializing GeoIP AS DB
-Nov  9 17:07:40 u804 named[20155]: GEO-117 20090321 Build 1 Copyright (c) 2007 MaxMind LLC All Rights Reserved
-Nov  9 17:07:40 u804 named[20155]: GeoIP NetSpeed DB not available
-Nov  9 17:07:40 u804 named[20155]: GeoIP Domain DB not available
-Nov  9 17:07:40 u804 named[20155]: running
+Dec 18 17:00:11 u804 named[5162]: Initializing GeoIP Country DB
+Dec 18 17:00:11 u804 named[5162]: GEO-106FREE 20090201 Build 1 Copyright (c) 2007 MaxMind LLC All Rights Reserved
+Dec 18 17:00:11 u804 named[5162]: Initializing GeoIP City DB Revision 1
+Dec 18 17:00:11 u804 named[5162]: GEO-133 20091215 Build 1 Copyright (c) 2009 MaxMind Inc All Rights Reserved
+Dec 18 17:00:11 u804 named[5162]: GeoIP Region DB Revision 0 or 1 not available
+Dec 18 17:00:11 u804 named[5162]: GeoIP ISP DB not available
+Dec 18 17:00:11 u804 named[5162]: Initializing GeoIP Organization DB
+Dec 18 17:00:11 u804 named[5162]: GEO-111 20091201 Build 1 Copyright (c) 2009 MaxMind Inc All Rights Reserved
+Dec 18 17:00:11 u804 named[5162]: Initializing GeoIP AS DB
+Dec 18 17:00:11 u804 named[5162]: GEO-117 20090321 Build 1 Copyright (c) 2007 MaxMind LLC All Rights Reserved
+Dec 18 17:00:11 u804 named[5162]: GeoIP NetSpeed DB not available
+Dec 18 17:00:11 u804 named[5162]: GeoIP Domain DB not available
+Dec 18 17:00:11 u804 named[5162]: Initializing GeoIP Country DB IPv6
+Dec 18 17:00:11 u804 named[5162]: GEO-106FREE 20091201 Build 1 Copyright (c) 2009 MaxMind Inc All Rights Reserved
 }}}
 
-GeoIP support was able to find the Country, City Rev1, Organization, and AS databases, but not others.
+GeoIP support was able to find the Country, City Rev1, Organization, AS, and Country IPv6 databases, but not the others.
 
 IMPORTANT NOTE: If you specify a geoip rule in match-clients{} that reflects an unavailable DB, it will be silently ignored.
 
@@ -162,7 +172,8 @@ If you see a syslog message like:
 
 	`error while loading shared libraries: libGeoIP.so.1: cannot open shared object file: No such file or directory`
 
-This means BIND can't find the GeoIP C API.  You may need to specify its location via LD_LIBRARY_PATH.
+This means BIND can't find the GeoIP C API.  You may need to specify its location via LD_LIBRARY_PATH.  Alternatively, passing an argument to the `--with-geoip=` configure option will set the runtime library path.
+
 
 
 ==UPDATING THE MAXMIND® DATABASES==
@@ -184,6 +195,8 @@ Whereas this will only generate one call:
   `match-clients { geoip_cityDB_country_US; geoip_cityDB_country_FR; };`
 
 match-clients{} clauses that contain multiple cityDB lookups are free from an API perspective.  Also, subsequent sequential DNS requests from the same LDNS IP can reuse this structure, though this usage pattern is not common.
+
+NOTE: This optimization will most likely not be implemented for a potential future City IPv6 database, since storing and comparing the necessary IPv6 IP struct (ip6_addr) in TLS will likely create more overhead than the cost of simply re-querying GeoIP.
 
 
 ==FEEDBACK==
