--- a/wiki/NotesOnGeoLocation.wiki
+++ b/wiki/NotesOnGeoLocation.wiki
@@ -7,7 +7,7 @@ Geo-location provides a fairly accurate geographic location of a specified IP ad
 
 The LDNS server is typically part of a large set of DNS servers used by ISPs to provide DNS service to their customers (your visitors).  However, the LDNS IP address could be that of an arbitrarily chosen DNS server, or the DNS client on the visitor's computer itself.
 
-The accuracy of geo-location DNS relies on the geographic correlation between LDNS servers and visitors.  Thus, the location that you will receive from geo-location will typically only be accurate within a certain radius (perhaps a mile, perhaps much more).  For reference, this accuracy radius is estimated by the MaxMind™ Accuracy Radius database.
+The accuracy of geo-location DNS relies on the geographic correlation between LDNS servers and visitors.  Thus, the location that you will receive from geo-location will typically only be accurate within a certain radius (perhaps a mile, perhaps much more).  For reference, this accuracy radius is estimated by the !MaxMind™ Accuracy Radius database.
 
 According to a recent test we ran on social network web traffic, the number of unique visitor IPs was roughly 200 times the number of unique LDNS IP addresses over the same period.  In other words, there was 1 LDNS server for every 200 visitor IP addresses.  These IP addresses could also be NAT IPs, so the exact relationship between IP addresses and unique visitors is somewhat opaque.
 
@@ -16,7 +16,7 @@ Also, some large IP ranges are located entirely at a predefined central spot for
 1. Anyone in the US (for example) using these large ranges (millions of IPs) could show up as coming from Potwin, KS.<br>
 2. Using geo-location radiuses, you could get very surprising jumps in traffic.  For example, including 38,-97 in your radius would cause a large jump.
 
-These accuracy caveats are primarily applicable to a database that provides longitude/latitude data, or city granularity (e.g., MaxMind™ City).   For other databases, the data provided is at a much larger granularity, and will be much less likely to be affected by the above accuracy issues.
+These accuracy caveats are primarily applicable to a database that provides longitude/latitude data, or city granularity (e.g., !MaxMind™ City).   For other databases, the data provided is at a much larger granularity, and will be much less likely to be affected by the above accuracy issues.
 
 Geo-location *does* provide a good estimate of your visitors' geographic location based on the generally good correlation between the location of a visitor and their LDNS server.
 
