--- a/wiki/NotesOnGeoLocation.wiki
+++ b/wiki/NotesOnGeoLocation.wiki
@@ -9,9 +9,9 @@ The accuracy of geo-location DNS relies on the geographic correlation between LD
 
 According to a recent test we ran on social network web traffic, the number of unique visitor IPs was roughly 200 times the number of unique LDNS IP addresses over the same period.  In other words, there was 1 LDNS server for every 200 visitor IP addresses.  These IP addresses could also be NAT IPs, so the exact relationship between IP addresses and unique visitors is somewhat opaque.
 
-Also, some large IP ranges are located entirely at a predefined central spot for the country in which that IP range is located.  For example, many large US IP ranges are almost entirely located at 38,-97, which is in the middle of a small field near Potwin, Kansas -- the center of the continental United States.  Subsets of these large (end-user) ranges are broken out to have enhanced accuracy, but the database isn't perfect.  This means two things:
+Also, some large IP ranges are located entirely at a predefined central spot for the country in which that IP range is located.  For example, many large US IP ranges are almost entirely located at 38,-97 with no other information (besides country) provided.  38,-97 is in the middle of a small field near Potwin, Kansas -- the geographic center of the continental United States.  Subsets of these large (end-user) ranges are broken out to have enhanced accuracy, but the database isn't perfect.  This implies two things:
 
-1. Anyone in the US (for example) using these large ranges (millions of IPs) could show up as coming from Potwin, KS.<br>
+1. Anyone in the USA (for example) using these large ranges (millions of IPs) could show up as coming from Potwin, KS (or rather, 38,-97).<br>
 2. Using geo-location radiuses, you could get very surprising jumps in traffic.  For example, including 38,-97 in your radius would cause a large jump.
 
 These accuracy caveats are primarily applicable to a database that provides longitude/latitude data, or city granularity (e.g., !MaxMind™ City).   For other databases, the data provided is at a much larger granularity, and will be much less likely to be affected by the above accuracy issues.
