--- a/wiki/UsageGuide.wiki
+++ b/wiki/UsageGuide.wiki
@@ -40,7 +40,7 @@ To build BIND with GeoIP support, you will first need to build/install the GeoIP
 
 After unpacking the BIND distribution, cd into the untarred directory and run:
 
-  `patch -p0 -b < <path-to-this-patch>/bind-geoip-1.3.patch`
+  `patch -p0 -b < /path/to/this/patch/bind-geoip-1.3.patch`
 
 This will apply the required patches. You can ignore any conflict on version, but we recommend you change the RELEASEVER string to denote a patched version.
 
@@ -54,7 +54,7 @@ To add GeoIP support when running configure, there are two key options:
 
 This enables support for GeoIP functionality.  It looks for GeoIP in standard locations, and will automatically detect if IPv6 support is available.
 
-You can also specify a path to the location of your GeoIP install (within which should exist lib and include directories):
+You can also specify a path to the location of your GeoIP install (within which should exist "lib" and "include" directories):
 
   `--with-geoip=/usr/local`
 
@@ -71,7 +71,7 @@ GeoIP matches are performed in the BIND match-clients{} clause in a BIND view.  
 
   `geoip_<DBTYPE>DB_<FIELD>_<VALUE>`
 
-For values that contain spaces, the '_' character should be used instead.  For timezone values that contain the '/' character, the '|' character should be used instead.
+For values that contain spaces, the '`_`' character should be used instead.  For timezone values that contain the '/' character, the '|' character should be used instead.
 
 Note that match-clients{} options are ANDed.  More complex logic must be obtained with multiple views (ORs) or careful use and solid understanding of the ! operator.
 
@@ -205,4 +205,4 @@ Please comment here to submit feedback.
 
 Thanks!
 
-_Copyright (c) 2009, Slide, Inc._
+_Copyright (c) 2010, Slide, Inc._
