--- a/wiki/ProjectNews.wiki
+++ b/wiki/ProjectNews.wiki
@@ -1,6 +1,10 @@
 #summary General news
 #labels Phase-Design,Featured
 
+==Patch updated for 9.8.0-P1 (2011.05.09)==
+
+Patch updated only to bump the version.  Tested successfully in production.
+
 ==Patch updated for 9.8.0 (2011.03.16)==
 
 Patch updated only to bump the version and create a new clean diff.  Tested successfully in production.
