--- a/wiki/ProjectNews.wiki
+++ b/wiki/ProjectNews.wiki
@@ -1,6 +1,17 @@
 #summary General news
 #labels Phase-Design,Featured
 
+==Version 2.0 in planning (2011.05.12)==
+
+With the release of v1.4.7 of the GeoIP C API, new database types have been made available.  Initial goals for geoip-2.0 are:
+
+  * Support a named.conf config option to alter the directory that the API looks in to find database .dat files.
+  * Emit into the named log the name of the directory path in which the API is expecting to find database .dat files.  This will help diagnose the reported installation difficulties.
+  * Support any relevant new database editions supported by 1.4.7.
+  * Hopefully the geoip-2.0 release will remain compatible with GeoIP C API releases before 1.4.7.  EIther way, geoip-1.3 should remain compatible with all versions.
+
+i haven't received much feedback, but if there's something you'd like me to add/fix/change, let me know fairly soon.
+
 ==Patch updated for 9.8.0-P1 (2011.05.09)==
 
 Patch updated only to bump the version.  Tested successfully in production.
