--- a/wiki/ProjectNews.wiki
+++ b/wiki/ProjectNews.wiki
@@ -1,6 +1,10 @@
 #summary General news
 #labels Phase-Design,Featured
 
+==Patch updated for 9.9.1-P2 (2012.08.02)==
+
+This is an updated 1.3 patch for BIND 9.9.1-P2.  No functional changes were made.
+
 ==Patch updated for 9.9.0 (2012.03.01)==
 
 This is an updated 1.3 patch for BIND 9.9.0.  PLEASE NOTE: Previous patches (with fuzz) will erroneously apply to 9.9.0 and cause hard failure!  Please only apply patches to differing BIND revisions with "patch -F0".
