--- a/wiki/ProjectNews.wiki
+++ b/wiki/ProjectNews.wiki
@@ -18,7 +18,7 @@ With the release of v1.4.7 of the GeoIP C API, new database types have been made
   * Support any relevant new database editions supported by 1.4.7.
   * Hopefully the geoip-2.0 release will remain compatible with GeoIP C API releases before 1.4.7.  EIther way, geoip-1.3 should remain compatible with all versions.
 
-i haven't received much feedback, but if there's something you'd like me to add/fix/change, let me know fairly soon.
+I haven't received much feedback, but if there's something you'd like me to add/fix/change, let me know!
 
 ==Patch updated for 9.8.0-P1 (2011.05.09)==
 
